# lance-go

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  go.mod  go.sum
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: README.md  api.md  caching.md  callbacks.md  distributed.md  indexes.md  memory.md  observability.md  storage.md  troubleshooting.md  usage.md
examples/: README.md
include/: lance_go.h
lance/: allocator.go  benchmark_test.go  blob.go  blob_test.go  branch.go  branch_test.go  cache.go  cache_lifetime_test.go  cache_test.go  callbacks.go  callbacks_init.go  callbacks_test.go  cancel_test.go  cbytes.go  config.go  config_internal_test.go  config_test.go  dataset.go  dataset_test.go  delta.go  delta_test.go  distributed.go  distributed_internal_test.go  distributed_test.go  encoding.go  encoding_test.go  errors.go  errors_test.go  evolution.go  evolution_test.go  example_dataset_test.go  example_mutation_test.go  example_scan_test.go  example_search_test.go  fragment.go  fragment_test.go  hooks.go  hooks_test.go  index.go  index_test.go  (+35 more)
rust/: Cargo.toml  build.rs  cbindgen.toml
rust/ffi-macros/: Cargo.toml
rust/ffi-macros/src/: lib.rs
rust/src/: arrow_bridge.rs  blob.rs  branch.rs  cache.rs  callbacks.rs  config.rs  dataset.rs  delta.rs  distributed.rs  error.rs  evolution.rs  fragment.rs  hooks.rs  index.rs  lib.rs  maintenance.rs  mutation.rs  runtime.rs  scanner.rs  session.rs  sql.rs  storage.rs  take.rs  transaction.rs  version.rs
scripts/: download-artifacts.sh  smoke-test-artifact.sh
(+22 files in other folders)
